<?xml version="1.0"?>
<package format="2">
  <name>flatland_demo</name>
  <version>0.0.0</version>
  <description>The flatland_demo package</description>


  <maintainer email="wagnermarcos@ekumenlabs.com">marcos</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>flatland_msgs</depend>
  <depend>flatland_plugins</depend>
  <depend>flatland_server</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>flatland_viz</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <flatland_server plugin="${prefix}/flatland_plugins.xml" />

  </export>
</package>
